# RTS

./: .gitignore  .gitmodules  CMakeLists.txt  Collisions.cpp  Collisions.hpp  Commands.cpp  Config.hpp  Doxyfile  Game.cpp  GameLoop.cpp  GameLoop.hpp  IObject.hpp  IRenderer.hpp  MovableObject.cpp  ObjectBase.hpp  README.md  RTS.cpp  RTS.h  RenderData.cpp  RenderData.hpp  Renderer2D.hpp  Scroller.hpp  TestData.cpp  TestObject.cpp  VideoContextSDL.cpp  build.cmd  deps_ubuntu.sh  format.cmd  format.sh  game.cpp  make.cmd  renderer.txt
.github/workflows/: cmake.yml
assets/: gen.php
custom/: Commands.cpp  TestObject.hpp  TestStaticObject.cpp  TestStaticObject.hpp
docs/html/: Cloneable_8hpp_source.html  CommandBase_8hpp_source.html  CommandQueue_8hpp_source.html  Config_8hpp_source.html  Coord_8hpp_source.html  CppHacks_8hpp_source.html  GameLoop_8hpp_source.html  ICommand_8hpp_source.html  IMovableObject_8hpp_source.html  IObject_8hpp_source.html  IVideoContext_8hpp_source.html  Math_8hpp_source.html  ObjectBase_8hpp_source.html  RenderData_8hpp_source.html  Renderer_8hpp_source.html  Scroller_8hpp_source.html  TestObject_8hpp_source.html  VideoContext_8hpp_source.html  annotated.html  classB.html  classB__inherit__graph.map  classB__inherit__graph.md5  classCloneable-members.html  classCloneable.html  classCloneable__coll__graph.map  classCloneable__coll__graph.md5  classCloneable__inherit__graph.map  classCloneable__inherit__graph.md5  classCommandBase-members.html  classCommandBase.html  classCommandBase__coll__graph.map  classCommandBase__coll__graph.md5  classCommandBase__inherit__graph.map  classCommandBase__inherit__graph.md5  classCommandMove_1_1CommandMove-members.html  classCommandMove_1_1CommandMove.html  classCommandQueue-members.html  classCommandQueue.html  classGameLoop-members.html  classGameLoop.html  (+74 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  searchdata.js
docs/latex/: annotated.tex  classB.tex  classB__inherit__graph.md5  classCloneable.tex  classCloneable__coll__graph.md5  classCloneable__inherit__graph.md5  classCommandBase.tex  classCommandBase__coll__graph.md5  classCommandBase__inherit__graph.md5  classCommandMove_1_1CommandMove.tex  classCommandQueue.tex  classGameLoop.tex  classICommand.tex  classICommand__inherit__graph.md5  classIMovableObject.tex  classIMovableObject__coll__graph.md5  classIMovableObject__inherit__graph.md5  classIObject.tex  classIObject__inherit__graph.md5  classIVideoContext.tex  classIVideoContext__inherit__graph.md5  classIdleCommands_1_1CommandIdle.tex  classMap.tex  classObjectBase.tex  classObjectBase__coll__graph.md5  classObjectBase__inherit__graph.md5  classRenderer2D.tex  classScroller.tex  classTestObject.tex  classTestObject__coll__graph.md5  classTestObject__inherit__graph.md5  classVideoContextSDL.tex  classVideoContextSDL__inherit__graph.md5  hierarchy.tex  refman.tex  structCoord.tex  structCoord__coll__graph.md5
engine/: Collisions.cpp  Collisions.hpp  CommandQueue.hpp  GameLoop.cpp  GameLoop.hpp  MovableObject.cpp  MovableObject.hpp  ObjectBase.cpp  ObjectBase.hpp  RenderData.cpp  RenderData.hpp  StaticObject.cpp  StaticObject.hpp
gfx/: Renderer2D.cpp  Renderer2D.hpp  Scroller.cpp  Scroller.hpp
inc/: CommandBase.hpp  CommandGetHealth.hpp  CommandIdle.hpp  CommandMove.hpp  CommandTpl.hpp  Config.hpp  Coord.hpp  CppHacks.hpp  GameLoop.hpp  ICommand.hpp  IMovableObject.hpp  IObject.hpp  IResponse.hpp  ObjectBase.hpp  RTS.h  RenderData.hpp  Renderer.hpp  Scroller.hpp  TestObject.hpp  VideoContext.hpp
inc/game/: TestObject.hpp
inc/impl/2D/: Renderer2D.hpp  VideoContextSDL.hpp
inc/interfaces/: Cloneable.hpp  Coord.hpp  ICommand.hpp  IMovableObject.hpp  IObject.hpp  IVideoContext.hpp
inc/kernel/: Math.hpp  ObjectBase.hpp  RenderData.hpp
interfaces/: ICommand.hpp  IMovableObject.hpp  IObject.hpp  IRenderer.hpp  IStaticObject.hpp  IVideoContext.hpp
kernel/: ObjectBase.cpp
kernel/inc/: CommandBase.hpp  CommandTpl.hpp  ICommand.hpp  IMovableObject.hpp  IObject.hpp  IResponse.hpp  ObjectBase.hpp
platform/: VideoContextSDL.cpp  VideoContextSDL.hpp
src/: CommandMove.cpp  Commands.cpp  GameLoop.cpp  MovableObject.cpp  ObjectBase.cpp  RTS.cpp  RenderData.cpp  TestObject.cpp  VideoContext.cpp
src/kernel/: CommandQueue.cpp
stuff/: Cloneable.hpp  Coord.hpp  CppHacks.hpp  Math.hpp
